--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
+    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-helper": "^1.2.1",
     "react-native-maps": "^0.24.2",
     "react-native-paper": "^2.16.0",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^4.0.2"
+    "react-navigation": "^4.0.2",
+    "react-navigation-stack": "^1.5.4"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
