--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "expo": "^34.0.1",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -16,9 +17,14 @@
     "react-native-gesture-helper": "^1.2.1",
     "react-native-maps": "^0.24.2",
     "react-native-paper": "^2.16.0",
+    "react-native-reanimated": "^1.2.0",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.2",
-    "react-navigation-stack": "^1.5.4"
+    "react-navigation-stack": "^1.5.4",
+    "react-redux": "^7.1.1",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.14",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
