--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-gesture-handler": "^1.4.1",
     "react-native-gesture-helper": "^1.2.1",
-    "react-native-maps": "^0.24.2",
+    "react-native-maps": "0.25.0",
     "react-native-paper": "^2.16.0",
     "react-native-reanimated": "^1.2.0",
     "react-native-web": "^0.11.4",
