--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-native-gesture-handler": "^1.4.1",
     "react-native-gesture-helper": "^1.2.1",
     "react-native-maps": "0.25.0",
+    "react-native-modals": "^0.19.8",
     "react-native-paper": "^2.16.0",
     "react-native-reanimated": "^1.2.0",
+    "react-native-snap-carousel": "^3.8.1",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.6",
     "react-navigation-stack": "^1.5.4",
