--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-redux": "^7.1.1",
     "reanimated-bottom-sheet": "^1.0.0-alpha.14",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "terraformer-wkt-parser": "^1.2.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^6.0.0"
