--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@shoutem/ui": "^1.0.3",
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "i18next": "^19.0.0",
