--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "expo": "^35.0.0",
     "i18next": "^19.0.0",
+    "ldapjs": "^1.0.2",
     "proj4": "^2.5.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
